# prismatoid

./: .gitignore  ApiParser.cpp  ApiParser.hpp  CMakeLists.txt  LICENSE  LightpackDevice.cpp  LightpackDevice.hpp  README.md  Server.cpp  Server.hpp  color_types.hpp  colorspace_types.cpp  colorspace_types.hpp  main.cpp
dist-files/: 93-lightpack.rules  lightmild  lightoff  lighton
